# MK1-Tank

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  extract_version.py  mk1config.sample.txt  partitions.csv  platformio.ini  sdkconfig.defaults
.claude/: settings.json
main/: CMakeLists.txt  main.c  mkh_broadcast.c  mkh_broadcast.h  mkh_config.c  mkh_config.h  mkh_imu.cpp  mkh_imu.h  mkh_ports.h  mkh_protocol.c  mkh_protocol.h  mkh_sdcard.cpp  mkh_sdcard.h  mkh_storage.cpp  mkh_storage.h  mkh_thl.cpp  mkh_thl.h  mkh_touch.cpp  mkh_touch.h  sketch.cpp
